--- a/2048-game/App.config
+++ b/2048-game/App.config
@@ -1,6 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="_2048_game.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7" />
     </startup>
+    <userSettings>
+        <_2048_game.Properties.Settings>
+            <setting name="Save_hash" serializeAs="String">
+                <value />
+            </setting>
+        </_2048_game.Properties.Settings>
+    </userSettings>
 </configuration>
