Created the best score system

--- a/2048-game/App.config
+++ b/2048-game/App.config
@@ -13,6 +13,9 @@
             <setting name="Save_hash" serializeAs="String">
                 <value />
             </setting>
+            <setting name="Best_score" serializeAs="String">
+                <value>0</value>
+            </setting>
         </_2048_game.Properties.Settings>
     </userSettings>
 </configuration>
