--- a/2048-game/Properties/Settings.settings
+++ b/2048-game/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="Save_hash" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="Best_score" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
